finish structuring files and partials

--- a/source/stylesheets/config/_variables.css.scss
+++ b/source/stylesheets/config/_variables.css.scss
@@ -2,9 +2,9 @@
  * Fonts
  * ------------------------------------- */
 // Google fonts
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Playfair+Diplay:400,700");
 $base-font: "Open Sans", "Helvetica", "sans-serif";
-$header-font: "Raleway", "Helvetica", "sans-serif";
+$header-font: "Playfair Display", "Times", "serif";
 
 // Local fonts (uncomment following lines)
 // @font-face {
@@ -18,13 +18,14 @@ $header-font: "Raleway", "Helvetica", "sans-serif";
 
 // Font-size and line-height
 $base-size: 16px;
-$base-height: 1.4;
+$base-height: 1.618;
 
 /* -------------------------------------
  * Colors
  * ------------------------------------- */
 // Scheme
-$brand-color: #D23333;
+$brand-color: #F36863;
+$brand-color-dark: darken($brand-color, 13.5%);
 
 $red: #EE5F5B;
 $blue: #469AE0;
