--- a/source/_navbar.erb
+++ b/source/_navbar.erb
@@ -1,12 +1,11 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <% link_to "/", class: "navbar-wagon-brand" do %>
-    <%= image_tag "lewagon.png" %>
+    <h1>AirBnb</h1>
   <% end %>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
-
     <!-- Search form -->
     <form action="" class="navbar-wagon-search">
       <input type="text" class="navbar-wagon-search-input" placeholder="Search something">
@@ -14,22 +13,12 @@
         <i class="fa fa-search"></i>
       </button>
     </form>
-
     <!-- Text link -->
-    <a href="https://www.lewagon.com" class="navbar-wagon-item navbar-wagon-link">Wagon</a>
-
+    <a href="#" class="navbar-wagon-item navbar-wagon-link">Contact</a>
     <!-- Text link -->
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Team</a>
-
-    <!-- Notification link-->
-    <a href="" class="navbar-wagon-item navbar-wagon-link">
-      <div class="badge-container">
-        <i class="fa fa-envelope-o"></i>
-        <div class="badge badge-blue">3</div>
-      </div>
-    </a>
-
+    <%= link_to "Team", "team.html", class: "navbar-wagon-item navbar-wagon-link" %>
     <!-- Profile picture and dropdown -->
+    <!--
     <div class="navbar-wagon-item">
       <div class="dropdown">
         <img src="http://placehold.it/50x50" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
@@ -39,10 +28,10 @@
           <li><a href="#">Log Out</a></li>
         </ul>
       </div>
-    </div>
+    </div>-->
 
     <!-- Button (call-to-action) -->
-    <a href="" class="navbar-wagon-item navbar-wagon-button btn">Post stuff</a>
+    <a href="#" class="navbar-wagon-item btn btn-primary btn-up">Login</a>
   </div>
 
   <!-- Dropdown appearing on mobile only -->
