--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,7 +14,6 @@
     <title><%= current_page.data.title || "The Middleman" %></title>
 
     <%= stylesheet_link_tag "all" %>
-    <%= javascript_include_tag  "all" %>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- Leave those next 4 lines if you care about users using IE8 -->
@@ -28,6 +27,8 @@
 
     <%= partial "navbar" %>
     <%= yield %>
+    <%= partial "footer" %>
 
+    <%= javascript_include_tag  "all" %>
   </body>
 </html>
