--- a/source/stylesheets/layout/_navbar.scss
+++ b/source/stylesheets/layout/_navbar.scss
@@ -20,8 +20,14 @@
 }
 
 /* Navbar logo */
-.navbar-wagon-brand img {
-  width: 50px;
+.navbar-wagon-brand {
+  img {
+    width: 50px;
+  }
+  h1 {
+    font-family: $header-font;
+    color: $brand-color;
+  }
 }
 
 /* Navbar right section (with form, links, button) */
@@ -80,7 +86,6 @@
   background: transparent;
   position: absolute;
   right: 14px;
-  top: -2px;
   z-index: 1;
 }
 .navbar-wagon-search-input {
