--- a/source/stylesheets/config/_variables.css.scss
+++ b/source/stylesheets/config/_variables.css.scss
@@ -2,7 +2,7 @@
  * Fonts
  * ------------------------------------- */
 // Google fonts
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Playfair+Diplay:400,700");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Playfair+Diplay:400,700");
 $base-font: "Open Sans", "Helvetica", "sans-serif";
 $header-font: "Playfair Display", "Times", "serif";
 
