--- a/source/stylesheets/components/_button.scss
+++ b/source/stylesheets/components/_button.scss
@@ -5,7 +5,7 @@
   margin: 0 8px;
   padding: .75em 1.5em;
   letter-spacing: 0.025em;
-  transition: all .05s ease;
+  transition: all 0.05s ease;
 }
 .btn-up:hover,
 .btn-primary:hover {
