--- a/source/stylesheets/components/_links.scss
+++ b/source/stylesheets/components/_links.scss
@@ -4,6 +4,7 @@ a {
   color: $brand-color;
   transition: all .1s ease;
   &:hover {
+    text-decoration: none;
     border: none;
     color: $brand-color-dark;
   }
