--- a/source/team.erb
+++ b/source/team.erb
@@ -4,7 +4,7 @@ title: Team
 
 <div class="container team text-center padded">
   <div class="row">
-    <div class="col-xs-10 col-xs-offset-1">
+    <div class="col-xs-12">
       <h2>Our team</h2>
       <ul class="list-inline text-center members">
         <% ["boris", "seb", "romain"].each do |member| %>
