--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -7,20 +7,20 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.banner-content {
-  z-index: 100;
-}
-.banner-title {
-  font-size: 4em;
-  font-weight: bold;
-  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
-  margin-bottom: .25em;
-}
-.banner-tagline {
-  font-size: 25px;
-  font-weight: lighter;
-  color: rgba(255, 255, 255, 0.9);
-  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
-  margin-bottom: 50px;
+  &-content {
+    z-index: 100;
+  }
+  &-title {
+    font-size: 4em;
+    font-weight: bold;
+    text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+    margin-bottom: .25em;
+  }
+  &-tagline {
+    font-size: 25px;
+    font-weight: lighter;
+    color: rgba(255, 255, 255, 0.9);
+    text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+    margin-bottom: 50px;
+  }
 }
