--- a/source/stylesheets/layout/_footer.scss
+++ b/source/stylesheets/layout/_footer.scss
@@ -1,15 +1,13 @@
 .footer {
   padding: 2em 0;
   color: rgba(255,255,255,.8);
-}
-
-.footer a {
-  color: inherit;
-  font-size: 30px;
-  letter-spacing: 20px;
-  transition: color 0.5s ease;
-}
-
-.footer p {
-  margin: 1em 0;
+  a {
+    color: inherit;
+    font-size: 30px;
+    letter-spacing: 20px;
+    transition: color 0.5s ease;
+  }
+  p {
+    margin: 1em 0;
+  }
 }
