--- a/source/team.erb
+++ b/source/team.erb
@@ -9,7 +9,7 @@ title: Team
       <ul class="list-inline text-center members">
         <% ["boris", "seb", "romain"].each do |member| %>
           <li class="member">
-            <%= image_tag "#{member}.jpg", class: "img-circle" %>
+            <%= image_tag "#{member}.jpg", class: "img-circle avatar-extra-large" %>
             <p><%= member.capitalize %></p>
           </li>
         <% end %>
