--- a/source/_navbar.erb
+++ b/source/_navbar.erb
@@ -1,6 +1,6 @@
 <div class="navbar-wagon">
   <!-- Logo -->
-  <% link_to "index.html", class: "navbar-wagon-brand" do %>
+  <% link_to "/", class: "navbar-wagon-brand" do %>
     <h1>AirBnb</h1>
   <% end %>
 
