--- a/source/stylesheets/components/_avatar.scss
+++ b/source/stylesheets/components/_avatar.scss
@@ -1,19 +1,22 @@
 .avatar {
   width: 32px;
   border-radius: 50%;
-  &-large {
+  &-medium {
     width: 48px;
-    border-radius: 50%;
+  }
+  &-large {
+    width: 96px;
+  }
+  &-extra-large {
+    width: 128px;
   }
   &-bordered {
     width: 32px;
-    border-radius: 50%;
     box-shadow: 0 1px 2px rgba(0,0,0,0.2);
     border: white 1px solid;
   }
   &-square {
     width: 32px;
-    border-radius: 0px;
     box-shadow: 0 1px 2px rgba(0,0,0,0.2);
     border: white 1px solid;
   }
