--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -52,6 +52,9 @@
     font-weight: bolder;
     margin: 0 0 .25em;
   }
+  .card-summary {
+    color: #fff;
+  }
 }
 .card-link {
   cursor: pointer;
